Version 2.5.30dev:

* Added a basic WHDLoad settings page (tweak splash delay,
  show directory for WHDLoad.key file).
* Fixed loading of .fs-uae config files containg % character in values.
* Fixed on-demand download of floppy images from HTTP.
* Remove some inefficiences when selecting database games in config list.
* Fixed look of variant choice control under OS X.

Version 2.5.28dev:

* Fixed Windows console appearing when using portable launchers.
* Automatically maximize when desktop height <= 768.
* Support for multiple game databases.
* Remove window border when running under GNOME 3 with desktop height <= 768.

Version 2.5.25dev:

* Fixed problem locating translation files in some cases.
* Reverted to preferring QT4 for now.
* Added several joystick configs [johanpalmqvist].

Version 2.5.24dev:

* New user interface layout (config list on the left).
* Improved support for lower-resolution displays.
* Preliminary support for new config visualization (config_feature=1).
* Prefer QT5 when running the launcher, QT4 when running the arcade interface.
* Fixed bug preventing Windows version from joining the net play lobby.
* Also look for ../bin/fs-uae on Linux/Unix.

Version 2.5.23dev:

* Fixed joystick configurations, added --add-dummy-joystick arg for testing.
* Require at least Python 3.2 to start, if not, abort with error.
* Code cleanup, removed Python 2.x compatibility code.
* setup.py: reject installation to default python library dir.
* Makefile: Added separate install, install-program and install-data targets.

Version 2.5.22dev:

* Add support for WHDLoad 18.0.
* Make WHDLoad 18.0 the default WHDLoad version.

Version 2.5.21dev:

* Allow clearing preferred joystick(s) via settings UI.
* Can start with path to .fs-uae file as final argument (auto-runs
  configuration via FS-UAE Launcher).
* Can start with game uuid as final argument (auto-runs preferred variant).
* Can start with variant uuid as final argument (autu-runs specified variant).